--- a/StatsServices/public_html/WEB-INF/classes/pom.xml
+++ b/StatsServices/public_html/WEB-INF/classes/pom.xml
@@ -35,6 +35,15 @@
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.5.1</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
         <version>2.4</version>
         <configuration>
@@ -217,6 +226,11 @@
       <artifactId>slf4j-log4j12</artifactId>
       <version>1.7.25</version>
       <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish</groupId>
+      <artifactId>javax.json</artifactId>
+      <version>1.1</version>
     </dependency>
   </dependencies>
 </project>
