--- a/StatsServices/pom.xml
+++ b/StatsServices/pom.xml
@@ -27,7 +27,8 @@
         <directory>src/main/resources</directory>
         <targetPath>${project.build.directory}</targetPath>
         <includes>
-          <include>log4j.properties</include>
+          <!--include>log4j.properties</include-->
+          <include>log4j2.xml</include>
         </includes>
       </resource>
     </resources>
